--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-liff-app",
+  "name": "my-liff-app1",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,12 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@line/liff": "^2.23.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@line/liff": "^2.23.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.3.0",
     "vite": "5.2.12"
   }
 }
